--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -117,15 +117,34 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Avatar.cs" />
     <Compile Include="Models\Belonging.cs" />
+    <Compile Include="Models\Chapter.cs" />
+    <Compile Include="Models\Clothe.cs" />
     <Compile Include="Models\Control.cs" />
+    <Compile Include="Models\Conversation.cs" />
     <Compile Include="Models\DataAccessLayer.cs" />
     <Compile Include="Models\DatabaseContext.cs" />
+    <Compile Include="Models\Exercise.cs" />
+    <Compile Include="Models\ExerciseType.cs" />
+    <Compile Include="Models\Eye.cs" />
+    <Compile Include="Models\Friendship.cs" />
+    <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\Grade.cs" />
     <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\Hair.cs" />
     <Compile Include="Models\IDataAccessLayer.cs" />
+    <Compile Include="Models\Level.cs" />
+    <Compile Include="Models\Matter.cs" />
+    <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\Mouth.cs" />
+    <Compile Include="Models\Nose.cs" />
     <Compile Include="Models\Right.cs" />
+    <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Switch.cs" />
     <Compile Include="Models\SwitchExtensions.cs" />
+    <Compile Include="Models\Theme.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
