Rearranging of the project. EF6 POWA

--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -117,35 +117,32 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Avatar.cs" />
-    <Compile Include="Models\Belonging.cs" />
-    <Compile Include="Models\Chapter.cs" />
-    <Compile Include="Models\Clothe.cs" />
-    <Compile Include="Models\Control.cs" />
-    <Compile Include="Models\Conversation.cs" />
-    <Compile Include="Models\DataAccessLayer.cs" />
-    <Compile Include="Models\DatabaseContext.cs" />
-    <Compile Include="Models\Exercise.cs" />
-    <Compile Include="Models\ExerciseType.cs" />
-    <Compile Include="Models\Eye.cs" />
-    <Compile Include="Models\Friendship.cs" />
-    <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Grade.cs" />
-    <Compile Include="Models\Group.cs" />
-    <Compile Include="Models\Hair.cs" />
-    <Compile Include="Models\IDataAccessLayer.cs" />
-    <Compile Include="Models\Level.cs" />
-    <Compile Include="Models\Matter.cs" />
-    <Compile Include="Models\Message.cs" />
-    <Compile Include="Models\Mouth.cs" />
-    <Compile Include="Models\Nose.cs" />
-    <Compile Include="Models\Right.cs" />
-    <Compile Include="Models\Status.cs" />
-    <Compile Include="Models\Switch.cs" />
-    <Compile Include="Models\SwitchExtensions.cs" />
-    <Compile Include="Models\Theme.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\AvatarEntities\Avatar.cs" />
+    <Compile Include="Models\SNContext.cs" />
+    <Compile Include="Models\UserContext.cs" />
+    <Compile Include="Models\UserEntities\Belonging.cs" />
+    <Compile Include="Models\SchoolEntities\Chapter.cs" />
+    <Compile Include="Models\AvatarEntities\Clothe.cs" />
+    <Compile Include="Models\UserEntities\Control.cs" />
+    <Compile Include="Models\ChatEntities\Conversation.cs" />
+    <Compile Include="Models\GameEntities\Exercise.cs" />
+    <Compile Include="Models\GameEntities\ExerciseType.cs" />
+    <Compile Include="Models\AvatarEntities\Eye.cs" />
+    <Compile Include="Models\SocialNetworkEntities\Friendship.cs" />
+    <Compile Include="Models\GameEntities\Game.cs" />
+    <Compile Include="Models\SchoolEntities\Grade.cs" />
+    <Compile Include="Models\UserEntities\Group.cs" />
+    <Compile Include="Models\AvatarEntities\Hair.cs" />
+    <Compile Include="Models\Interfaces\IDataAccessLayer.cs" />
+    <Compile Include="Models\GameEntities\Level.cs" />
+    <Compile Include="Models\SchoolEntities\Matter.cs" />
+    <Compile Include="Models\ChatEntities\Message.cs" />
+    <Compile Include="Models\AvatarEntities\Mouth.cs" />
+    <Compile Include="Models\AvatarEntities\Nose.cs" />
+    <Compile Include="Models\UserEntities\Right.cs" />
+    <Compile Include="Models\SocialNetworkEntities\Status.cs" />
+    <Compile Include="Models\SchoolEntities\Theme.cs" />
+    <Compile Include="Models\UserEntities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
