Creation of the class library project for the DALs.

--- a/ITI.ItSchool.Tests/ITI.ItSchool.Tests.csproj
+++ b/ITI.ItSchool.Tests/ITI.ItSchool.Tests.csproj
@@ -92,8 +92,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="BackOfficeControllerTest.cs" />
-    <Compile Include="DataAccessLayerTests.cs" />
+    <Compile Include="DBContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
