Removing the DAL project. Some problem on the creation of DB.

--- a/ITI.ItSchool/Web.config
+++ b/ITI.ItSchool/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DatabaseContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=ITI.ItSchool.Models.DatabaseContext;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFrameworkMUE" />
+    <add name="ItSchool" connectionString="DataSource=(localdb)\v11.0; Initial Catalog=ItSchool.Models.Contexts; Integrated Security=true; MultipleActiveResultSets=True; Application Name=EntityFrameworkMUE" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
