--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -117,12 +117,37 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AvatarContext.cs" />
-    <Compile Include="Models\ChatContext.cs" />
-    <Compile Include="Models\GameContext.cs" />
-    <Compile Include="Models\SchoolContext.cs" />
-    <Compile Include="Models\SocialNetworkContext.cs" />
-    <Compile Include="Models\UserContext.cs" />
+    <Compile Include="Models\Contexts\AvatarContext.cs" />
+    <Compile Include="Models\AvatarEntities\Avatar.cs" />
+    <Compile Include="Models\AvatarEntities\Clothe.cs" />
+    <Compile Include="Models\AvatarEntities\Eye.cs" />
+    <Compile Include="Models\AvatarEntities\Hair.cs" />
+    <Compile Include="Models\AvatarEntities\Mouth.cs" />
+    <Compile Include="Models\AvatarEntities\Nose.cs" />
+    <Compile Include="Models\Contexts\ChatContext.cs" />
+    <Compile Include="Models\ChatEntities\Conversation.cs" />
+    <Compile Include="Models\ChatEntities\Message.cs" />
+    <Compile Include="Models\Contexts\GameContext.cs" />
+    <Compile Include="Models\GameEntities\Exercise.cs" />
+    <Compile Include="Models\GameEntities\ExerciseType.cs" />
+    <Compile Include="Models\GameEntities\Game.cs" />
+    <Compile Include="Models\GameEntities\Level.cs" />
+    <Compile Include="Models\IUserRepository.cs" />
+    <Compile Include="Models\Contexts\SchoolContext.cs" />
+    <Compile Include="Models\SchoolEntities\Chapter.cs" />
+    <Compile Include="Models\SchoolEntities\Grade.cs" />
+    <Compile Include="Models\SchoolEntities\Matter.cs" />
+    <Compile Include="Models\SchoolEntities\Theme.cs" />
+    <Compile Include="Models\Contexts\SocialNetworkContext.cs" />
+    <Compile Include="Models\SocialNetworkEntities\Friendship.cs" />
+    <Compile Include="Models\SocialNetworkEntities\Status.cs" />
+    <Compile Include="Models\SQLUserRepository.cs" />
+    <Compile Include="Models\Contexts\UserContext.cs" />
+    <Compile Include="Models\UserEntities\Belonging.cs" />
+    <Compile Include="Models\UserEntities\Control.cs" />
+    <Compile Include="Models\UserEntities\Group.cs" />
+    <Compile Include="Models\UserEntities\Right.cs" />
+    <Compile Include="Models\UserEntities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -145,12 +170,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ITI.ItSchool.DAL\ITI.ItSchool.DAL.csproj">
-      <Project>{4e099bb7-2613-45bb-ba51-95430dce310a}</Project>
-      <Name>ITI.ItSchool.DAL</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
