--- a/ITI.ItSchool.Tests/ITI.ItSchool.Tests.csproj
+++ b/ITI.ItSchool.Tests/ITI.ItSchool.Tests.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserContextTests.cs" />
+    <Compile Include="ContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
