Adjusting the connection + minor dictation update

--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6640,6 +6640,7 @@
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
+    <Content Include="Scripts\jsHtml5AudioRecorder.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\ng-polymer-elements.js" />
     <Content Include="Scripts\painting.js" />
