--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -99,10 +99,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\TestDB.mdf" />
-    <Content Include="App_Data\TestDB_log.ldf">
-      <DependentUpon>TestDB.mdf</DependentUpon>
-    </Content>
     <Content Include="bower_components\core-a11y-keys\core-a11y-keys.html" />
     <Content Include="bower_components\core-a11y-keys\demo.html" />
     <Content Include="bower_components\core-a11y-keys\index.html" />
@@ -3740,17 +3736,6 @@
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_24px.svg" />
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_36px.svg" />
     <Content Include="Images\material-design-icons\navigation\svg\production\ic_unfold_more_48px.svg" />
-    <Content Include="MyModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MyModel.edmx</DependentUpon>
-      <LastGenOutput>MyModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="MyModel.edmx.sql" />
-    <Content Include="MyModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MyModel.edmx</DependentUpon>
-      <LastGenOutput>MyModel.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -4441,13 +4426,6 @@
     <Content Include="bower_components\webcomponentsjs\build.log" />
     <Content Include="bower_components\webcomponentsjs\package.json" />
     <Content Include="bower_components\webcomponentsjs\README.md" />
-    <EntityDeploy Include="MyModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MyModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="MyModel.edmx.diagram">
-      <DependentUpon>MyModel.edmx</DependentUpon>
-    </Content>
     <Content Include="Scripts\docs\components\bootstrap-3.1.1\css\bootstrap-theme.css" />
     <Content Include="Scripts\docs\components\bootstrap-3.1.1\css\bootstrap-theme.min.css" />
     <Content Include="Scripts\docs\components\bootstrap-3.1.1\css\bootstrap.css" />
@@ -6704,21 +6682,6 @@
     <Compile Include="Models\CardsData.cs" />
     <Compile Include="Models\DictationText.cs" />
     <Compile Include="Models\LoginData.cs" />
-    <Compile Include="MyModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MyModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="MyModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyModel.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Models\Contexts\AvatarContext.cs" />
     <Compile Include="Models\AvatarEntities\Avatar.cs" />
     <Compile Include="Models\Contexts\ChatContext.cs" />
@@ -6749,9 +6712,6 @@
       <DependentUpon>201506110906165_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="SchoolContextMigrations\Configuration.cs" />
-    <Compile Include="User1.cs">
-      <DependentUpon>MyModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="UserContextMigrations\201506110359496_Initial.cs" />
     <Compile Include="UserContextMigrations\201506110359496_Initial.Designer.cs">
       <DependentUpon>201506110359496_Initial.cs</DependentUpon>
@@ -6781,6 +6741,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Scripts\i18n\ngLocale\" />
     <Folder Include="Views\Data\" />
   </ItemGroup>
