--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6675,26 +6675,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="AvatarContextMigrations\201506141920554_Initial.cs" />
-    <Compile Include="AvatarContextMigrations\201506141920554_Initial.Designer.cs">
-      <DependentUpon>201506141920554_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AvatarContextMigrations\Configuration.cs" />
-    <Compile Include="ChatContextMigrations\201506110827204_Initial.cs" />
-    <Compile Include="ChatContextMigrations\201506110827204_Initial.Designer.cs">
-      <DependentUpon>201506110827204_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ChatContextMigrations\Configuration.cs" />
     <Compile Include="Controllers\BackOfficeController.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\DrawController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestInputController.cs" />
-    <Compile Include="GameContextMigrations\201506110401143_Initial.cs" />
-    <Compile Include="GameContextMigrations\201506110401143_Initial.Designer.cs">
-      <DependentUpon>201506110401143_Initial.cs</DependentUpon>
+    <Compile Include="ExerciseContextMigrations\201506161427233_Initial.cs" />
+    <Compile Include="ExerciseContextMigrations\201506161427233_Initial.Designer.cs">
+      <DependentUpon>201506161427233_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameContextMigrations\Configuration.cs" />
+    <Compile Include="ExerciseContextMigrations\Configuration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -6724,10 +6714,10 @@
     <Compile Include="Models\Contexts\ChatContext.cs" />
     <Compile Include="Models\ChatEntities\Conversation.cs" />
     <Compile Include="Models\ChatEntities\Message.cs" />
-    <Compile Include="Models\Contexts\GameContext.cs" />
-    <Compile Include="Models\GameEntities\ExerciseType.cs" />
-    <Compile Include="Models\GameEntities\Game.cs" />
-    <Compile Include="Models\GameEntities\Level.cs" />
+    <Compile Include="Models\Contexts\ExerciseContext.cs" />
+    <Compile Include="Models\ExerciseEntities\ExerciseType.cs" />
+    <Compile Include="Models\ExerciseEntities\Exercise.cs" />
+    <Compile Include="Models\ExerciseEntities\Level.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\Contexts\SchoolContext.cs" />
     <Compile Include="Models\SchoolEntities\Chapter.cs" />
@@ -6744,19 +6734,9 @@
     <Compile Include="Models\UserEntities\Group.cs" />
     <Compile Include="Models\UserEntities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SchoolContextMigrations\201506110906165_Initial.cs" />
-    <Compile Include="SchoolContextMigrations\201506110906165_Initial.Designer.cs">
-      <DependentUpon>201506110906165_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SchoolContextMigrations\Configuration.cs" />
     <Compile Include="User1.cs">
       <DependentUpon>MyModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="UserContextMigrations\201506110359496_Initial.cs" />
-    <Compile Include="UserContextMigrations\201506110359496_Initial.Designer.cs">
-      <DependentUpon>201506110359496_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UserContextMigrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -6792,20 +6772,8 @@
     <TypeScriptCompile Include="Scripts\collections.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AvatarContextMigrations\201506141920554_Initial.resx">
-      <DependentUpon>201506141920554_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ChatContextMigrations\201506110827204_Initial.resx">
-      <DependentUpon>201506110827204_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GameContextMigrations\201506110401143_Initial.resx">
-      <DependentUpon>201506110401143_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SchoolContextMigrations\201506110906165_Initial.resx">
-      <DependentUpon>201506110906165_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserContextMigrations\201506110359496_Initial.resx">
-      <DependentUpon>201506110359496_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="ExerciseContextMigrations\201506161427233_Initial.resx">
+      <DependentUpon>201506161427233_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
