--- a/ITI.ItSchool/ITI.ItSchool.csproj
+++ b/ITI.ItSchool/ITI.ItSchool.csproj
@@ -6639,13 +6639,14 @@
     <Content Include="Templates\Error.html" />
     <Content Include="Templates\home.html" />
     <Content Include="Templates\KidDragAndDropExercice.html" />
+    <Content Include="Templates\KidPlayBattleCardPage.html" />
     <Content Include="Templates\KidPlayDictationPage.html" />
     <Content Include="Templates\KidSelectExercicesPage.html" />
     <Content Include="Templates\KidHomePage.html" />
     <Content Include="Templates\KidLobbyPage.html" />
     <Content Include="Templates\KidLoginPage.html" />
     <Content Include="Templates\KidRegistrationPage.html" />
-    <Content Include="Templates\TeacherCustomizeBattleCardPage.html" />
+    <Content Include="Templates\TeacherDescriptionBattleCardPage.html" />
     <Content Include="Templates\TeacherCustomizeDictationPage.html" />
     <Content Include="Templates\TeacherCustomizeDragAndDropPage.html" />
     <Content Include="Templates\TeacherLobbyPage.html" />
@@ -6690,6 +6691,7 @@
     <Compile Include="Models\Contexts\ExerciseDictationContext.cs" />
     <Compile Include="Models\DictationText.cs" />
     <Compile Include="Models\LoginData.cs" />
+    <Compile Include="Models\PlugExercises\ExerciseBattleCard.cs" />
     <Compile Include="Models\PlugExercises\ExerciseCloze.cs" />
     <Compile Include="Models\PlugExercises\ExerciseDictation.cs" />
     <Compile Include="Models\Contexts\AvatarContext.cs" />
